# AntiPirateScreen

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pirmus.vbs  start.py
.aps/: CONFIG.xtml  aps_injector.aps  exe_tree.aps
.github/workflows/: build.yml  release.yml  security-scan.yml
src/c/: CMakeLists.txt  protection.c  protection.h
src/cpp/: CMakeLists.txt  protection.cpp  protection.h
src/csharp/: AntiPirateScreen.csproj  AssemblyInfo.cs  Protection.cs
src/java/: AntiPirateScreen.java  Protection.java  pom.xml
src/javascript/: index.js  package.json  protection.js
src/python/: __init__.py  protection.py  requirements.txt
